# replace-drop

./: Cargo.toml  README.md
examples/: calling_drop.rs
src/: lib.rs
