[package]
name = "replace-drop"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Run a custom drop for a type"
repository = "https://github.com/Raspberry1111/replace-drop"
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
